[package]
name = "volp-raspberrypi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
cpal = "0.15.2"
hound = "3.5.1"
reqwest = { version = "0.11.2", default-features = false, features = [
    "json",
    "multipart",
    "rustls-tls",
] }
rppal = "0.17.1"
rumqttc = { version = "0.23.0", default-features = false, features = [
    "use-rustls",
] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
yup-oauth2 = "8.3.0"
